cmake_minimum_required(VERSION 3.10)
project(Awtk_3rdLibrary)
if(PLATFORM STREQUAL "T113")
    set(AWTK_SO ${CMAKE_CURRENT_SOURCE_DIR}/../lib/t113/libawtk.so)
else()
    set(AWTK_SO ${CMAKE_CURRENT_SOURCE_DIR}/../lib/t507/libawtk.so)
endif()
message("AWTK_INCLUDE== ${AWTK_INCLUDE}")
add_subdirectory(line_chart)
add_subdirectory(banner_menu)

